; ModuleID = '/home/carl/AnghaBench/radare2/libr/core/extr_visual.c_prevPrintCommand.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/core/extr_visual.c_prevPrintCommand.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@current0format = common dso_local global i64 0, align 8
@currentFormat = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @prevPrintCommand to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @prevPrintCommand() #0 {
  %1 = load i64, i64* @current0format, align 8
  %2 = add nsw i64 %1, -1
  store i64 %2, i64* @current0format, align 8
  %3 = load i64, i64* @current0format, align 8
  %4 = icmp slt i64 %3, 0
  br i1 %4, label %5, label %6

5:                                                ; preds = %0
  store i64 0, i64* @current0format, align 8
  br label %6

6:                                                ; preds = %5, %0
  %7 = load i64, i64* @current0format, align 8
  store i64 %7, i64* @currentFormat, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
